# sprintrs

./: .envrc  .gitignore  Cargo.toml  LICENSE.MIT  README.md  build.rs  start.spring.io.json
.config/: config.json5
.github/workflows/: cd.yml
src/: app.rs  client.rs  common.rs  components.rs  config.rs  main.rs  model.rs  tui.rs
src/components/: button.rs  home.rs  initializr.rs
src/widgets/: button.rs
