[package]
name = "sprintrs"
version = "0.1.0"
edition = "2021"
description = "A TUI for start.spring.io"
authors = ["Ray Suliteanu <raysuliteanu@proton.me>"]
license = "MIT OR Apache-2.0"
keywords = ["tui", "spring-boot", "spring-framework", "terminal"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.18", features = ["derive", "cargo"] }
color-eyre = "0.6.3"                                          # pretty logging
directories = "5.0.1"                                         # XDG dirs
lazy_static = "1.5.0"
log = "0.4.22"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
